# air-quality-prediction-webapp

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  python-tests.yml
data/: airquality-wekerom.csv
frontend/: index.html
issues/: 1.md
src/api/: routes.py
src/config/: config.py
src/ingestion/: data_loader.py
src/models/: air_quality_regressor.py  airquality-pm25-wekerom-model.pth  train.py
src/schemas/: prediction_request.py  prediction_response.py
src/services/: model_service.py
tests/: test_api.py  test_model.py
